# IUA

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  interview1.cpp
lib/: CMakeLists.txt
lib/Utilities/: CMakeLists.txt
lib/Utilities/include/: ArrayComparator.h  Comparators.h  LexicographicComparator.h  Utility.h  Vector.h
lib/algorithms/: CMakeLists.txt
lib/algorithms/include/: ArithmeticType.h  ArrayComparator.h  StopWatch.h  Utility.h  Vector.h
lib/algorithms/src/: StopWatch.cpp
lib/include/: Utility.h
lib/src/: Utility.cpp
tests/: CMakeLists.txt  VectorTests.cpp  test.cpp
